copy research from obs,
seperate functions with md blocks

add alts for sel, cross and mut

--- a/pi7-part1.ipynb
+++ b/pi7-part1.ipynb
@@ -1,22 +1,63 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78eb8ea6",
+   "cell_type": "markdown",
+   "id": "2c6aa528",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 127, [2, 0, 1, 4, 3])\n"
-     ]
-    }
-   ],
    "source": [
-    "import random\n",
+    "# Genetic Algorithm\n",
     "\n",
+    "A genetic algorithm starts with an initial population of solutions that evolves using selection, crossover, and mutation operators. These operators can be implemented in different ways, each affecting the performance.[](https://www.geeksforgeeks.org/dsa/genetic-algorithms/)[](https://www.mathworks.com/help/gads/how-the-genetic-algorithm-works.html)[](https://pmc.ncbi.nlm.nih.gov/articles/PMC7274742/)\n",
+    "\n",
+    "## Crossover Methods\n",
+    "\n",
+    "- **Single-point crossover**: Efficient, often used in GAs, good for simple solution encoding. Produces offspring with contiguous blocks from parents—great for maintaining solution structure.[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
+    "- **Multi-point crossover**: Uses multiple cut points; increases diversity and exploration capability but may disrupt good gene combinations.[](https://wseas.com/journals/computers/2013/5705-156.pdf)[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)\n",
+    "- **Uniform crossover**: Swaps genes randomly based on a mask, promoting high diversity but can break useful gene combinations more easily.[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
+    "- **Specialized crossovers** (Order Crossover OX, Partially Mapped PMX, Cycle Crossover CX): Designed for sequencing problems and maintain order or position relationships, typically yielding better results for job sequencing tasks.[](https://dergipark.org.tr/en/download/article-file/4353944)[](https://www.atlantis-press.com/article/25845582.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
+    "\t- For job sequencing, Order and PMX crossovers are commonly recommended due to their ability to preserve job order and avoid duplicates.[](https://www.atlantis-press.com/article/25845582.pdf)[](https://dergipark.org.tr/en/download/article-file/4353944)\n",
+    "\n",
+    "## Parent Selection Methods\n",
+    "Parent selection determines which solutions breed and pass their qualities to the next generation.[](https://www.tutorialspoint.com/genetic_algorithms/genetic_algorithms_parent_selection.htm)\n",
+    "- **Roulette Wheel Selection**: Probability proportional to fitness; maintains diversity.\n",
+    "- **Tournament Selection**: Selects the best from random subsets; speeds convergence, possibly reduces diversity.\n",
+    "- **Rank Selection**: Sorts individuals by fitness and selects with a bias.\n",
+    "- **Elitism**: Always keeps a few best solutions; improves stability, combats loss of good genes.\n",
+    "- For sequencing, tournament selection is preferred for balancing exploration and exploitation.[](https://algorithmafternoon.com/books/genetic_algorithm/chapter04/)\n",
+    "\n",
+    "## Mutation Operators\n",
+    "Mutation introduces random changes to individual solutions to prevent premature convergence and explore new search regions. Typical mutation methods for job sequencing include:[](https://en.wikipedia.org/wiki/Genetic_algorithm)\n",
+    "\n",
+    "- **Swap Mutation**: Randomly swaps two jobs in the sequence; maintains feasibility.\n",
+    "- **Insertion Mutation**: Moves a job to a random position; helps maintain legal sequences.\n",
+    "- Mutation rate must be balanced: too low may cause genetic drift, too high can erase good solutions unless elite retention is used.[](https://en.wikipedia.org/wiki/Genetic_algorithm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "34efa112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c2623a7",
+   "metadata": {},
+   "source": [
+    "## Fitness function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1685a094",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def fitness(schedule, deadlines, profits):\n",
     "    total_profit = 0\n",
     "    job_count = 0\n",
@@ -28,8 +69,24 @@
     "            job_count += 1\n",
     "        i += 1\n",
     "\n",
-    "    return total_profit, job_count\n",
-    "\n",
+    "    return total_profit, job_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fbb2fdb",
+   "metadata": {},
+   "source": [
+    "## Population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "7ee5bb8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def init_pop(n_jobs, pop_size):\n",
     "    population = []\n",
     "\n",
@@ -38,27 +95,70 @@
     "        random.shuffle(candidate)\n",
     "        population.append(candidate)\n",
     "\n",
-    "    return population\n",
-    "\n",
+    "    return population"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bfdd70d",
+   "metadata": {},
+   "source": [
+    "## Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07b3bcad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def tournament_sel(pop, scores, k=3):\n",
     "    selected = random.sample(range(len(pop)), k)\n",
     "    selected.sort(key=lambda i: scores[i], reverse=True)\n",
     "\n",
     "    return pop[selected[0]]\n",
     "\n",
-    "def single_point_x(parent1, parent2):\n",
-    "    n = len(parent1)\n",
-    "    cutoff = random.randrange(n)\n",
-    "    child = [-1] * n\n",
+    "def roulette_wheel_selection(pop, scores):\n",
+    "    total_fitness = sum(scores)\n",
     "    \n",
-    "    for idx in range(n):\n",
-    "        if idx < cutoff:\n",
-    "            child[idx] = parent1[idx]\n",
-    "        else :\n",
-    "            child[idx] = parent2[idx]\n",
+    "    if total_fitness == 0:\n",
+    "        return random.choice(pop)\n",
     "    \n",
-    "    return child\n",
-    "\n",
+    "    pick = random.uniform(0, total_fitness)\n",
+    "    current = 0\n",
+    "    \n",
+    "    for i, individual in enumerate(pop):\n",
+    "        current += scores[i]\n",
+    "        if current > pick:\n",
+    "            return individual\n",
+    "    \n",
+    "    return pop[-1]\n",
+    "    \n",
+    "def rank_selection(pop, scores):\n",
+    "    sorted_indices = sorted(range(len(scores)), key=lambda i: scores[i])\n",
+    "    ranks = [0] * len(scores)\n",
+    "    for i, idx in enumerate(sorted_indices):\n",
+    "        ranks[idx] = i + 1\n",
+    "    \n",
+    "    return roulette_wheel_selection(pop, ranks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "619d9b9c",
+   "metadata": {},
+   "source": [
+    "## Crossover"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36b3246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def order_x(parent1, parent2):\n",
     "    n = len(parent1)\n",
     "    p1, p2 = sorted(random.sample(range(n), 2))\n",
@@ -74,12 +174,85 @@
     "\n",
     "    return child\n",
     "\n",
+    "def pmx_crossover(parent1, parent2):\n",
+    "    n = len(parent1)\n",
+    "    p1, p2 = sorted(random.sample(range(n), 2))\n",
+    "    \n",
+    "    child = [-1] * n\n",
+    "    child[p1:p2] = parent1[p1:p2]\n",
+    "    \n",
+    "    mapping = {}\n",
+    "    for i in range(p1, p2):\n",
+    "        if parent2[i] not in child:\n",
+    "            mapping[parent2[i]] = parent1[i]\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        if child[i] == -1:\n",
+    "            val = parent2[i]\n",
+    "            while val in mapping:\n",
+    "                val = mapping[val]\n",
+    "            child[i] = val\n",
+    "    \n",
+    "    return child\n",
+    "\n",
+    "def order_preserving_one_point_crossover(parent1, parent2):\n",
+    "    n = len(parent1)\n",
+    "    cutoff = random.randrange(1, n)\n",
+    "    child = parent1[:cutoff]\n",
+    "    for gene in parent2:\n",
+    "        if gene not in child:\n",
+    "            child.append(gene)\n",
+    "    return child\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d062707f",
+   "metadata": {},
+   "source": [
+    "## Mutation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1681fa44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def swap_mutation(chrom):\n",
     "    a, b = random.sample(range(len(chrom)), 2)\n",
     "    chrom[a], chrom[b] = chrom[b], chrom[a]\n",
     "\n",
     "    return chrom\n",
     "\n",
+    "def insertion_mutation(chrom):\n",
+    "    chrom = chrom[:]\n",
+    "    if len(chrom) < 2:\n",
+    "        return chrom\n",
+    "    \n",
+    "    i = random.randrange(len(chrom))\n",
+    "    j = random.randrange(len(chrom))\n",
+    "    gene = chrom.pop(i)\n",
+    "    chrom.insert(j, gene)\n",
+    "    return chrom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1d31380",
+   "metadata": {},
+   "source": [
+    "## Full implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "75338bca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def genetic_algorithm(deadline, profit, pop_size=50, num_gens=200, crossover_rate=0.7, mutation_rate=0.1):\n",
     "    n_jobs = len(deadline)\n",
     "    population = init_pop(n_jobs, pop_size)\n",
@@ -115,19 +288,61 @@
     "\n",
     "    jobs_completed = fitness(best_schedule, deadline, profit)[1]\n",
     "\n",
-    "    return jobs_completed, best_profit, best_schedule\n",
-    "\n",
+    "    return jobs_completed, best_profit, best_schedule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2b58a0d",
+   "metadata": {},
+   "source": [
+    "## Usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "78eb8ea6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 127, [2, 0, 4, 1, 3])\n"
+     ]
+    }
+   ],
+   "source": [
     "deadline = [2, 1, 2, 1, 1]\n",
     "profit = [100, 19, 27, 25, 15]\n",
     "ans = genetic_algorithm(deadline, profit)\n",
     "print(ans)\n",
     "# fitness([3,1,2,0],deadline,profit)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5044cb25",
+   "metadata": {},
+   "source": [
+    "## Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c60c1b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluation here"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai",
+   "display_name": "zm001ds",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
