--- a/pi7-part1.ipynb
+++ b/pi7-part1.ipynb
@@ -9,14 +9,6 @@
     "\n",
     "A genetic algorithm starts with an initial population of solutions that evolves using selection, crossover, and mutation operators. These operators can be implemented in different ways, each affecting the performance.[](https://www.geeksforgeeks.org/dsa/genetic-algorithms/)[](https://www.mathworks.com/help/gads/how-the-genetic-algorithm-works.html)[](https://pmc.ncbi.nlm.nih.gov/articles/PMC7274742/)\n",
     "\n",
-    "## Crossover Methods\n",
-    "\n",
-    "- **Single-point crossover**: Efficient, often used in GAs, good for simple solution encoding. Produces offspring with contiguous blocks from parents—great for maintaining solution structure.[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
-    "- **Multi-point crossover**: Uses multiple cut points; increases diversity and exploration capability but may disrupt good gene combinations.[](https://wseas.com/journals/computers/2013/5705-156.pdf)[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)\n",
-    "- **Uniform crossover**: Swaps genes randomly based on a mask, promoting high diversity but can break useful gene combinations more easily.[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
-    "- **Specialized crossovers** (Order Crossover OX, Partially Mapped PMX, Cycle Crossover CX): Designed for sequencing problems and maintain order or position relationships, typically yielding better results for job sequencing tasks.[](https://dergipark.org.tr/en/download/article-file/4353944)[](https://www.atlantis-press.com/article/25845582.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
-    "\t- For job sequencing, Order and PMX crossovers are commonly recommended due to their ability to preserve job order and avoid duplicates.[](https://www.atlantis-press.com/article/25845582.pdf)[](https://dergipark.org.tr/en/download/article-file/4353944)\n",
-    "\n",
     "## Parent Selection Methods\n",
     "Parent selection determines which solutions breed and pass their qualities to the next generation.[](https://www.tutorialspoint.com/genetic_algorithms/genetic_algorithms_parent_selection.htm)\n",
     "- **Roulette Wheel Selection**: Probability proportional to fitness; maintains diversity.\n",
@@ -24,6 +16,14 @@
     "- **Rank Selection**: Sorts individuals by fitness and selects with a bias.\n",
     "- **Elitism**: Always keeps a few best solutions; improves stability, combats loss of good genes.\n",
     "- For sequencing, tournament selection is preferred for balancing exploration and exploitation.[](https://algorithmafternoon.com/books/genetic_algorithm/chapter04/)\n",
+    "\n",
+    "## Crossover Methods\n",
+    "\n",
+    "- **Single-point crossover**: Efficient, often used in GAs, good for simple solution encoding. Produces offspring with contiguous blocks from parents—great for maintaining solution structure.[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
+    "- **Multi-point crossover**: Uses multiple cut points; increases diversity and exploration capability but may disrupt good gene combinations.[](https://wseas.com/journals/computers/2013/5705-156.pdf)[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)\n",
+    "- **Uniform crossover**: Swaps genes randomly based on a mask, promoting high diversity but can break useful gene combinations more easily.[](https://bdm.ufpa.br/bitstream/prefix/7788/1/TCC_ComparisonCrossoverOperators.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
+    "- **Specialized crossovers** (Order Crossover OX, Partially Mapped PMX, Cycle Crossover CX): Designed for sequencing problems and maintain order or position relationships, typically yielding better results for job sequencing tasks.[](https://dergipark.org.tr/en/download/article-file/4353944)[](https://www.atlantis-press.com/article/25845582.pdf)[](https://wseas.com/journals/computers/2013/5705-156.pdf)\n",
+    "\t- For job sequencing, Order and PMX crossovers are commonly recommended due to their ability to preserve job order and avoid duplicates.[](https://www.atlantis-press.com/article/25845582.pdf)[](https://dergipark.org.tr/en/download/article-file/4353944)\n",
     "\n",
     "## Mutation Operators\n",
     "Mutation introduces random changes to individual solutions to prevent premature convergence and explore new search regions. Typical mutation methods for job sequencing include:[](https://en.wikipedia.org/wiki/Genetic_algorithm)\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "34efa112",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "1685a094",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "7ee5bb8a",
    "metadata": {},
    "outputs": [],
@@ -108,12 +108,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "07b3bcad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tournament_sel(pop, scores, k=3):\n",
+    "def tournament_selection(pop, scores, k=3):\n",
     "    selected = random.sample(range(len(pop)), k)\n",
     "    selected.sort(key=lambda i: scores[i], reverse=True)\n",
     "\n",
@@ -154,12 +154,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d36b3246",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def order_x(parent1, parent2):\n",
+    "# standard single point does not work here because it can end up making schedules with duplicate and missing jobs\n",
+    "def order_preserving_one_point_crossover(parent1, parent2):\n",
+    "    n = len(parent1)\n",
+    "    cutoff = random.randrange(1, n)\n",
+    "    child = parent1[:cutoff]\n",
+    "    for gene in parent2:\n",
+    "        if gene not in child:\n",
+    "            child.append(gene)\n",
+    "    return child\n",
+    "\n",
+    "def uniform_crossover(parent1, parent2, prob=0.5):\n",
+    "    n = len(parent1)\n",
+    "    child = [-1] * n\n",
+    "    used = set()\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        if random.random() < prob:\n",
+    "            if parent1[i] not in used:\n",
+    "                child[i] = parent1[i]\n",
+    "                used.add(parent1[i])\n",
+    "        else:\n",
+    "            if parent2[i] not in used:\n",
+    "                child[i] = parent2[i]\n",
+    "                used.add(parent2[i])\n",
+    "    \n",
+    "    missing = [gene for gene in range(n) if gene not in used]\n",
+    "    for i in range(n):\n",
+    "        if child[i] == -1:\n",
+    "            child[i] = missing.pop(0)\n",
+    "    \n",
+    "    return child\n",
+    "\n",
+    "def order_crossover(parent1, parent2):\n",
     "    n = len(parent1)\n",
     "    p1, p2 = sorted(random.sample(range(n), 2))\n",
     "    child = [-1] * n\n",
@@ -174,7 +206,7 @@
     "\n",
     "    return child\n",
     "\n",
-    "def pmx_crossover(parent1, parent2):\n",
+    "def partially_mapped_crossover(parent1, parent2):\n",
     "    n = len(parent1)\n",
     "    p1, p2 = sorted(random.sample(range(n), 2))\n",
     "    \n",
@@ -195,14 +227,30 @@
     "    \n",
     "    return child\n",
     "\n",
-    "def order_preserving_one_point_crossover(parent1, parent2):\n",
+    "def cycle_crossover(parent1, parent2):\n",
     "    n = len(parent1)\n",
-    "    cutoff = random.randrange(1, n)\n",
-    "    child = parent1[:cutoff]\n",
-    "    for gene in parent2:\n",
-    "        if gene not in child:\n",
-    "            child.append(gene)\n",
-    "    return child\n"
+    "    child = [-1] * n\n",
+    "    visited = [False] * n\n",
+    "    \n",
+    "    for start in range(n):\n",
+    "        if visited[start]:\n",
+    "            continue\n",
+    "            \n",
+    "        current = start\n",
+    "        cycle_positions = []\n",
+    "        \n",
+    "        while not visited[current]:\n",
+    "            visited[current] = True\n",
+    "            cycle_positions.append(current)\n",
+    "            \n",
+    "            value = parent1[current]\n",
+    "            current = parent2.index(value)\n",
+    "        \n",
+    "        use_parent1 = (start % 2 == 0) \n",
+    "        for pos in cycle_positions:\n",
+    "            child[pos] = parent1[pos] if use_parent1 else parent2[pos]\n",
+    "    \n",
+    "    return child"
    ]
   },
   {
@@ -215,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "1681fa44",
    "metadata": {},
    "outputs": [],
@@ -248,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "75338bca",
    "metadata": {},
    "outputs": [],
@@ -264,11 +312,11 @@
     "        new_pop = []\n",
     "\n",
     "        for _ in range(pop_size):\n",
-    "            parent1 = tournament_sel(population, scores)\n",
-    "            parent2 = tournament_sel(population, scores)\n",
+    "            parent1 = tournament_selection(population, scores)\n",
+    "            parent2 = tournament_selection(population, scores)\n",
     "\n",
     "            if random.random() < crossover_rate:\n",
-    "                child = order_x(parent1, parent2)\n",
+    "                child = order_crossover(parent1, parent2)\n",
     "            else:\n",
     "                child = parent1[:]\n",
     "\n",
@@ -292,6 +340,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "788064b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genetic_algorithm_configurable(deadline, profit,\n",
+    "                                   pop_size=50, num_gens=100,\n",
+    "                                   crossover_rate=0.7, mutation_rate=0.1,\n",
+    "                                   selection_method=\"tournament\",\n",
+    "                                   crossover_method=\"order_x\",\n",
+    "                                   mutation_method=\"swap\",\n",
+    "                                   elitism=0):\n",
+    "    \n",
+    "    selection_funcs = {\n",
+    "        \"tournament\": tournament_selection,\n",
+    "        \"roulette\": roulette_wheel_selection,\n",
+    "        \"rank\": rank_selection\n",
+    "    }\n",
+    "    \n",
+    "    crossover_funcs = {\n",
+    "        \"order_x\": order_crossover,\n",
+    "        \"pmxorder_x\": partially_mapped_crossover,\n",
+    "        \"cycle\": cycle_crossover,\n",
+    "        \"uniform\": uniform_crossover,\n",
+    "        \"single_point\": order_preserving_one_point_crossover\n",
+    "    }\n",
+    "    \n",
+    "    mutation_funcs = {\n",
+    "        \"swap\": swap_mutation,\n",
+    "        \"insertion\": insertion_mutation\n",
+    "    }\n",
+    "    \n",
+    "    n_jobs = len(deadline)\n",
+    "    population = init_pop(n_jobs, pop_size)\n",
+    "    best_profit = 0\n",
+    "    best_schedule = None\n",
+    "    \n",
+    "    selection_func = selection_funcs[selection_method]\n",
+    "    crossover_func = crossover_funcs[crossover_method]\n",
+    "    mutation_func = mutation_funcs[mutation_method]\n",
+    "\n",
+    "    for gen in range(num_gens):\n",
+    "        scores = [fitness(ind, deadline, profit)[0] for ind in population]\n",
+    "        \n",
+    "        current_best = max(scores) if scores else 0\n",
+    "        \n",
+    "        if current_best > best_profit:\n",
+    "            best_profit = current_best\n",
+    "            best_idx = scores.index(current_best)\n",
+    "            best_schedule = population[best_idx][:]\n",
+    "        \n",
+    "        new_pop = []\n",
+    "        \n",
+    "        if elitism > 0 and scores:\n",
+    "            elite_indices = sorted(range(len(scores)), key=lambda i: scores[i], reverse=True)[:elitism]\n",
+    "            for idx in elite_indices:\n",
+    "                new_pop.append(population[idx][:])\n",
+    "        \n",
+    "        for _ in range(pop_size - elitism):\n",
+    "            parent1 = selection_func(population, scores)\n",
+    "            parent2 = selection_func(population, scores)\n",
+    "\n",
+    "            if random.random() < crossover_rate:\n",
+    "                child = crossover_func(parent1, parent2)\n",
+    "            else:\n",
+    "                child = parent1[:]\n",
+    "\n",
+    "            if random.random() < mutation_rate:\n",
+    "                child = mutation_func(child)\n",
+    "\n",
+    "            new_pop.append(child)\n",
+    "\n",
+    "        population = new_pop\n",
+    "\n",
+    "    jobs_completed = fitness(best_schedule, deadline, profit)[1]\n",
+    "    return jobs_completed, best_profit, best_schedule"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d2b58a0d",
    "metadata": {},
@@ -301,24 +429,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "78eb8ea6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 127, [2, 0, 4, 1, 3])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(2, 127, [2, 0, 3, 4, 1])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "deadline = [2, 1, 2, 1, 1]\n",
     "profit = [100, 19, 27, 25, 15]\n",
-    "ans = genetic_algorithm(deadline, profit)\n",
-    "print(ans)\n",
-    "# fitness([3,1,2,0],deadline,profit)"
+    "# ans = genetic_algorithm(deadline, profit)\n",
+    "# print(ans)\n",
+    "\n",
+    "genetic_algorithm_configurable(deadline, profit)"
    ]
   },
   {
