fitness i start at 0

--- a/pi7-part1.ipynb
+++ b/pi7-part1.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "id": "34efa112",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1685a094",
    "metadata": {},
    "outputs": [],
@@ -62,9 +62,9 @@
     "    total_profit = 0\n",
     "    job_count = 0\n",
     "\n",
-    "    i = 1\n",
+    "    i = 0\n",
     "    for job in schedule:\n",
-    "        if i <= deadlines[job]:\n",
+    "        if i < deadlines[job]:\n",
     "            total_profit += profits[job]\n",
     "            job_count += 1\n",
     "        i += 1\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "7ee5bb8a",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "07b3bcad",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "d36b3246",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "1681fa44",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "75338bca",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "788064b9",
    "metadata": {},
    "outputs": [],
@@ -429,17 +429,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "78eb8ea6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 127, [2, 0, 3, 4, 1])"
+       "(2, 127, [2, 0, 4, 1, 3])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "c60c1b4a",
    "metadata": {},
    "outputs": [],
